--- a/package.json
+++ b/package.json
@@ -2,25 +2,41 @@
   "name": "my-next-app",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "npm run generate-data && npm run generate-sitemaps && next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "generate-data": "cross-env OPENAI_API_KEY=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 tsx ./scripts/generate.ts",
+    "generate-sitemaps": "tsx ./scripts/generate-sitemaps.ts"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.6",
+    "@radix-ui/react-slot": "^1.0.2",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
+    "csv-parse": "^5.5.3",
+    "lucide-react": "^0.477.0",
+    "next": "14.2.23",
+    "openai": "^4.28.0",
+    "p-limit": "^5.0.0",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.23"
+    "tailwind-merge": "^2.2.1",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "autoprefixer": "^10.0.1",
+    "cross-env": "^7.0.3",
     "eslint": "^8",
-    "eslint-config-next": "14.2.23"
+    "eslint-config-next": "14.2.23",
+    "postcss": "^8",
+    "tailwindcss": "^3.3.0",
+    "tsx": "^4.7.1",
+    "typescript": "^5"
   }
 }
