Configure project for Vercel deployment with environment variables and SEO

--- a/package.json
+++ b/package.json
@@ -2,25 +2,21 @@
   "name": "my-next-app",
   "version": "0.1.0",
   "private": true,
-  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "npm run generate-data && npm run generate-sitemaps && next build",
     "start": "next start",
     "lint": "next lint",
-    "generate-data": "cross-env OPENAI_API_KEY=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 tsx ./scripts/generate.ts",
+    "generate-data": "tsx ./scripts/generate.ts",
     "generate-sitemaps": "tsx ./scripts/generate-sitemaps.ts"
   },
   "dependencies": {
-    "@radix-ui/react-dialog": "^1.1.6",
+    "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-slot": "^1.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
-    "csv-parse": "^5.5.3",
-    "lucide-react": "^0.477.0",
+    "lucide-react": "^0.344.0",
     "next": "14.2.23",
-    "openai": "^4.28.0",
-    "p-limit": "^5.0.0",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.2.1",
