--- a/vercel.json
+++ b/vercel.json
@@ -11,8 +11,7 @@
     "NEXT_PUBLIC_ENABLE_ANALYTICS": "true",
     "NEXT_PUBLIC_ENABLE_SITEMAP": "true",
     "NEXT_PUBLIC_ENABLE_ROBOTS": "true",
-    "NODE_ENV": "production",
-    "OPENAI_API_KEY": "@openai-api-key"
+    "NODE_ENV": "production"
   },
   "build": {
     "env": {
@@ -23,8 +22,7 @@
       "NEXT_PUBLIC_ENABLE_ANALYTICS": "true",
       "NEXT_PUBLIC_ENABLE_SITEMAP": "true",
       "NEXT_PUBLIC_ENABLE_ROBOTS": "true",
-      "NODE_ENV": "production",
-      "OPENAI_API_KEY": "@openai-api-key"
+      "NODE_ENV": "production"
     }
   }
 }
